--- a/african-proverb/package.json
+++ b/african-proverb/package.json
@@ -13,7 +13,7 @@
     "african"
   ],
   "author": "cquenum",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "ask-sdk": "^2.0.0"
   }
